<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.slider.fragment.Slider1Fragment">

   <ImageView
       android:id="@+id/imageView"
       android:layout_width="275dp"
       android:layout_height="169dp"
       android:layout_marginBottom="200dp"
       android:src="@drawable/welcome"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:contentDescription="@string/welcome" />

   <TextView
       android:id="@+id/textView"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="38dp"
       android:gravity="center"
       android:text="@string/slider_welcome"
       android:textColor="@color/black"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/imageView" />

   <TextView
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
       android:layout_marginTop="16dp"
       android:layout_marginEnd="8dp"
       android:lineHeight="20sp"
       android:text="@string/slider1"
       android:textAlignment="center"
       android:textSize="12sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>